<resources>
    <string name="app_name">TGH Cambios</string>
    <string name="peru_channel_id">channel.id.notification.peru</string>
    <string name="peru_channel_name">Perú</string>
    <string name="colombia_channel_id">channel.id.notification.colombia</string>
    <string name="colombia_channel_name">Colombia</string>
    <string name="ecuador_channel_id">channel.id.notification.ecuador</string>
    <string name="ecuador_channel_name">Ecuador</string>
    <string name="normal_channel_id">channel.id.notification.normal</string>
    <string name="normal_channel_name">Tasas del día</string>
    <string name="title_activity_home">TGH Cambios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TGH Cambios</string>
    <string name="nav_header_subtitle">tghcambios@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_peru">Perú</string>
    <string name="menu_colombia">Colombia</string>
    <string name="menu_ecuador">Ecuador</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_exit">Salir</string>
    <string name="menu_shortcuts">Atajos</string>
    <string name="menu_options">Opciones</string>
    <string name="suscribir">Suscribir</string>
    <string name="desuscribir">Desuscribir</string>
    <string name="pais">País</string>
    <string name="seleccionar">Seleccionar:</string>
</resources>
