<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_shortcuts">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_peru"
                    android:icon="@drawable/ic_flag_variant_outline"
                    android:title="@string/menu_peru" />
                <item
                    android:id="@+id/nav_colombia"
                    android:icon="@drawable/ic_flag_variant"
                    android:title="@string/menu_colombia" />
                <item
                    android:id="@+id/nav_ecuador"
                    android:icon="@drawable/ic_flag_variant_outline"
                    android:title="@string/menu_ecuador" />
            </menu>
        </item>
    </group>

    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notification"
                android:title="@string/menu_notifications" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
